dongle-smartcontract/test_results_after_pull_fix.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
warning: unused imports: `publish_verification_approved_event`, `publish_verification_rejected_event`, and `publish_verification_requested_event`
 --> src\verification_registry.rs:5:5
  |
5 |     publish_verification_approved_event, publish_verification_rejected_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |     publish_verification_requested_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DataKey`
 --> src\verification_registry.rs:8:20
  |
8 | use crate::types::{DataKey, VerificationRecord, VerificationStatus};
  |                    ^^^^^^^

warning: unused import: `crate::constants::MAX_PROJECTS_PER_USER`
 --> src\test.rs:3:5
  |
3 | use crate::constants::MAX_PROJECTS_PER_USER;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:4:5
  |
4 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FeeConfig` and `VerificationStatus`
 --> src\test.rs:5:20
  |
5 | use crate::types::{FeeConfig, VerificationStatus};
  |                    ^^^^^^^^^  ^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:9:58
  |
9 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

error[E0609]: no field `name` on type `core::option::Option<Project>`
  --> src\registration_tests.rs:36:24
   |
36 |     assert_eq!(project.name, name);
   |                        ^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
36 |     assert_eq!(project.unwrap().name, name);
   |                        +++++++++

error[E0308]: mismatched types
  --> src\lib.rs:44:9
   |
43 |       ) -> u64 {
   |            --- expected `u64` because of return type
44 | /         ProjectRegistry::register_project(
45 | |             &env,
46 | |             owner,
47 | |             name,
...  |
52 | |             metadata_cid,
53 | |         )
   | |_________^ expected `u64`, found `Result<u64, ContractError>`
   |
   = note: expected type `u64`
              found enum `core::result::Result<u64, ContractError>`
help: consider using `Result::expect` to unwrap the `core::result::Result<u64, ContractError>` value, panicking if the value is a `Result::Err`
   |
53 |         ).expect("REASON")
   |          +++++++++++++++++

error[E0609]: no field `owner` on type `core::option::Option<Project>`
  --> src\registration_tests.rs:37:24
   |
37 |     assert_eq!(project.owner, owner);
   |                        ^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
37 |     assert_eq!(project.unwrap().owner, owner);
   |                        +++++++++

error[E0308]: mismatched types
  --> src\registration_tests.rs:71:24
   |
71 |     assert_eq!(result, Err(Ok(ContractError::ProjectAlreadyExists)));
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Result<u64, Error>, ...>`, found `Result<_, Result<ContractError, _>>`
   |
   = note: expected enum `core::result::Result<core::result::Result<u64, soroban_sdk::Error>, core::result::Result<soroban_sdk::Error, InvokeError>>`
              found enum `core::result::Result<_, core::result::Result<ContractError, _>>`

warning: unused variable: `env`
  --> src\verification_registry.rs:15:9
   |
15 |         env: &Env,
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_env`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `project_id`
  --> src\verification_registry.rs:16:9
   |
16 |         project_id: u64,
   |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project_id`

warning: unused variable: `requester`
  --> src\verification_registry.rs:17:9
   |
17 |         requester: Address,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_requester`

warning: unused variable: `evidence_cid`
  --> src\verification_registry.rs:18:9
   |
18 |         evidence_cid: String,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_evidence_cid`

For more information about this error, try `rustc --explain E0308`.
warning: `dongle-contract` (lib) generated 6 warnings
error: could not compile `dongle-contract` (lib) due to 1 previous error; 6 warnings emitted
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `dongle-contract` (lib test) generated 10 warnings (6 duplicates)
error: could not compile `dongle-contract` (lib test) due to 4 previous errors; 10 warnings emitted
